--- a/templates/product.html
+++ b/templates/product.html
@@ -1,18 +1,83 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+    .product {
+        display: inline-block;
+        background: var(--pastel-purple--);
+        border: 4px solid var(--Violet--);
+        border-radius: 20px;
+        width: 300px;
+        color: var(--Violet--);
+        margin: 5px;
+        height: 450px;
+        overflow-y: scroll;
+        position: relative;
+        scrollbar-width: none;
+    }
+
+    .product img {
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .product ul {
+        margin: 10px;
+        list-style: none;
+    }
+
+    .product_name {
+        font-weight: bold;
+        font-size: 20px;
+        margin-bottom: 5px;
+    }
+
+    .product_info {
+        font-size: 12px;
+    }
+    .product-bar {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 15px;
+    }
+
+    .price {
+        display: inline-block;
+    }
+
+    .original-discounted {
+        font-size: 10px;
+        text-decoration: line-through;
+    }
+
+</style>
 <h1>Product info page</h1>
 
 <!-- this is only to see if the page actually works  -->
-<img src="../static/images/sprout.PNG" alt="">
+<div class="product">
+    <p id="x-icon">&#10005;</p>
+    <hr>
+    <h1 class="product_name">{{product.product_name}}</h1>
+
+    <img src="../static/images/sprout.PNG" alt="">
     <ul>
-        <li class="product_name">{{product.product_name}}</li>
-        <li>{{product.product_desc}}</li>
-        <li class="product_action">Click for color options, sizes, warranty, etc...</li>
-        {% if product.discount_price %}
-        <li class="price">${{ product.discount_price }}</li>
-        <li class="original-discounted price">${{product.original_price}}</li>
-        {% else %}
-        <li class="price">${{product.original_price}}</li>
-        {% endif %}
+        <li><strong>Product ID:</strong> {{product.product_id}}</li>
+        <li><strong>Product Description: </strong>{{product.product_desc}}</li>
+
+        <li><strong>Product Sizes:</strong> {{product.product_sizes}}</li>
+        <li><strong> Currently Available:</strong> {{product.product_quantity}}</li>
+        <li><strong>Product Original Price:</strong> {{product.original_price}}</li>
+        <li><strong>Product Discount Price:</strong> {{product.discount_price}}</li>
+        <li><strong>Discount Ends:</strong> {{product.discount_date_end}}</li>
+        <li><strong>Product Warranty:</strong> {{product.product_warranty}}</li>
+        <li><strong>Sold By:</strong> {{product.vendor_username}}</li>
+
+        
     </ul>
+<!-- product_id, product_name, product_desc, product_color, 
+ product_sizes, product_quantity, original_price, discount_price, 
+ product_warranty, vendor_username, discount_date_end -->
+    
+</div>
 {% endblock %}
