adding styling and functionality for adding to the cart placing an order and the thank you for your order page. i wasnt able to figure out some fiunctionality with the cart icon to be correct, and for the items to stay ion the cart. tomorrow im gonna have it calculate the total price correctly.

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -78,6 +78,20 @@ body, button, input {
       text-align: center;
       display: block;
     }
+
+    .cart-link {
+      font-weight: bold;
+      font-size: 16px;
+      color: var(--Violet--, #8c5383); 
+      text-decoration: none;
+      position: relative;
+  }
+  
+  .cart-link:hover {
+      color: #7a52c2; 
+      text-decoration: underline;
+  }
+  
   
     /* FOOTER */
     *, *:before, *:after {
