finished customer view functionality

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -79,19 +79,11 @@ body, button, input {
       display: block;
     }
 
-    .cart-link {
-      font-weight: bold;
-      font-size: 16px;
-      color: var(--Violet--, #8c5383); 
-      text-decoration: none;
-      position: relative;
+ 
+  .cart{
+    width:30px;
+    height: 30px;
   }
-  
-  .cart-link:hover {
-      color: #7a52c2; 
-      text-decoration: underline;
-  }
-  
   
     /* FOOTER */
     *, *:before, *:after {
