--- a/templates/base.html
+++ b/templates/base.html
@@ -16,13 +16,15 @@
           <ul class="barItem">
               <li><a href="/">home</a></li>
     
+              {% if session.get('loggedin') %}
+                  <li><a href="{{ url_for('logout') }}" class="logout-link">logout</a></li>
+              {% endif %}
+        
+              
               {% if session.get('loggedin') and session.get('user_type') == 'Customer' %}
                   <li>
                       <a href="{{ url_for('view_cart') }}" class="cart-link">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="cart-icon" viewBox="0 0 16 16">
-                              <path d="M0 1a1 1 0 0 1 1-1h1.22a.5.5 0 0 1 .478.645L2.89 2H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.491-.408L2.01 2.607 1.61 1H1a1 1 0 0 1-1-1zM5 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm8-1a1 1 0 1 0 1 1 1 1 0 0 0-1-1z"/>
-                          </svg>
-                          ({{ session['cart']|length if session.get('cart') else 0 }})
+                         <img g src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Sale-Stickers-PNG/Shopping_Cart_Icon_PNG_Clipart.png?m=1629814077" class="cart">
                       </a>
                   </li>
               {% endif %}
