--- a/templates/admin_add_product.html
+++ b/templates/admin_add_product.html
@@ -30,7 +30,7 @@
       padding: 10px;
       border-radius: 20px;
       font-size: 1rem;
-      text-align: left;
+      text-align: center;
       align-content: center;
       width: 50%;
     }
@@ -56,7 +56,7 @@
 <div class="a_add_product">
     <h1>Add A Product</h1>
     <form action="{{ url_for('admin_add_product') }}" method="POST"> 
-      <img src="{{ url_for('static', filename='images/sprout.png') }}" alt="sprout">
+<img src="{{ url_for('static', filename='images/sprout.png') }}" alt="sprout">
         <div class="product-form">
             <label for="product_name">Product Name: </label>
             <input type="text" id="product_name" name="product_name" required>
@@ -64,30 +64,48 @@
             <label for="product_desc">Product Description: </label>
             <input type="text" id="product_desc" name="product_desc" required>
             <br> 
-            <label for="product_color">Product Color (Comma Separated): </label>
-            <input type="text" id="product_color" name="product_color" placeholder="e.g., Red, Blue, Green" required>
+            <label for="product_color">Product Color: </label>
             <br>
-            <label for="product_sizes">Product Sizes (Comma Separated): </label>
-            <input type="text" id="product_sizes" name="product_sizes" placeholder="e.g., Small, Medium, Large" required>
+            <input type="checkbox" name="colors" id="" value="Red"><label for="colors">Red</label>
+            <br>
+
+            <input type="checkbox" name="colors" id="" value="Yellow"><label for="colors">Yellow</label>
+            <br>
+
+            <input type="checkbox" name="colors" id="" value="Green"><label for="colors">Green</label>
+            <br>
+
+            <input type="checkbox" name="colors" id="" value="Blue"><label for="colors">Blue</label>
+            <br>
+
+            <input type="checkbox" name="colors" id="" value="Purple"><label for="colors">Purple</label>
+
+            <br>
+            <label for="product_sizes">Product Sizes: </label>
+            <br>
+            <input type="checkbox" name="sizes" id="" value="Small"><label for="sizes">Small</label>
+            <br>
+
+            <input type="checkbox" name="sizes" id="" value="Medium"><label for="sizes">Medium</label>
+            <br>
+
+            <input type="checkbox" name="sizes" id="" value="Large"><label for="sizes">Large</label>
             <br>
             <label for="product_quantity">Product Quantity: </label>
             <input type="number" id="product_quantity" name="product_quantity" required>
             <br>
             <label for="original_price">Product Price: </label>
-            <input type="text" id="original_price" name="original_price" required>
+            $<input type="text" id="original_price" name="original_price" required>
             <BR>
             <label for="discount_price">Discount Price: </label>
-            <input type="text" id="discount_price" name="discount_price">
+            $<input type="text" id="discount_price" name="discount_price">
             <BR>
             <label for="discount_date_end">End of Discount Period: </label>
             <input type="date" id="discount_date_end" name="discount_date_end" placeholder="if discount period...">
             <br>
             <label for="product_warranty">Product Warranty: </label>
             <input type="date" id="product_warranty" name="product_warranty" placeholder="if warranty...">
-            <br>
-            <label for="vendor_username">Select Vendor: </label>
-            <input type="text" id="vendor_username" name="vendor_username" placeholder="enter Vendor username"required>
-            <button type="submit" id="submit" class="admin-btn">Add Product</button>
+            <button type="submit" id="submit" class="sign-up">Add Product</button>
         </div>
     </form>
 </div>
