--- a/templates/customer.html
+++ b/templates/customer.html
@@ -24,7 +24,7 @@
     .user-info {
         display: block;
         background: var(--pastel-purple--);
-        border-radius: 30px;
+        border-radius: 10px;
         font-size: 15px;
         height: max-content;
     }
@@ -33,7 +33,7 @@
         background: url(../static/images/gradient-background.jpg);
         background-position: center;
         background-size: cover;
-        border-radius: 30px 30px 0 0;
+        border-radius: 10px 10px 0 0;
         align-content: center;
         padding: 10px;
     }
@@ -56,16 +56,10 @@
         list-style: none;
     }
 
-    hr {
-        display: block;
-        border: 2px solid var(--Violet--);
-    }
-
-    .product {
+    .product-listing {
         display: inline-block;
         background: var(--pastel-purple--);
-        border: 4px solid var(--Violet--);
-        border-radius: 20px;
+        border-radius: 10px;
         width: 300px;
         color: var(--Violet--);
         margin: 5px;
@@ -75,13 +69,13 @@
         scrollbar-width: none;
     }
 
-    .product img {
+    .product-listing img {
         display: block;
         width: 80%;
         margin: 0 auto;
     }
 
-    .product ul {
+    .product-listing ul {
         margin: 10px;
     }
 
@@ -182,6 +176,34 @@
         padding: 5px;
     }
 
+    .filter {
+        display: block;
+        background: var(--pastel-purple--);
+        margin: 20px 0;
+        border-radius: 10px;
+        padding: 10px 20px;
+    }
+
+    .filter button {
+        z-index: -1;
+        background: var(--Violet--);
+        color: var(--pastel-purple--);
+        border: none;
+        border-radius: 30px;
+        padding: 10px;
+        display: block;
+        margin: 0 auto;
+    }
+
+    .filter select {
+        display: block;
+        width: max-content;
+        margin: 5px;
+        border-radius: 30px;
+        padding: 10px;
+        border: 2px solid var(--Violet--);
+    }
+
 </style>
     <section class="store-page">
         <section id="side-bar">
@@ -198,9 +220,10 @@
                     </ul>
                 </div>
             </div>
-            <form action="">
+            <form action="/search" class="filter" id="filterForm">
                 <h1>Filters</h1>
                 <select name="color-filter" id="color-filter">
+                    <option value="" selected >Color</option>
                     <option value="red">Red</option>
                     <option value="yellow">Yellow</option>
                     <option value="green">Green</option>
@@ -208,11 +231,13 @@
                     <option value="purple">Purple</option>
                 </select>
                 <select name="size-filter" id="size-filter">
+                    <option value="" selected>Size</option>
                     <option value="small">Small</option>
                     <option value="medium">Medium</option>
                     <option value="large">Large</option>
                 </select>
                 <select name="stock-filter" id="stock-filter">
+                    <option value="" selected>Availability</option>
                     <option value="available">Available</option>
                     <option value="unavailable">Unavailable</option>
                 </select>
@@ -225,7 +250,7 @@
                 <div class="search-bar">
                     <img src="../static/images/strawberry.PNG" alt="">
                     <search>
-                        <form action="/search" method="post">
+                        <form action="/search" method="post" id="searchForm">
                             <input name="query" placeholder="Search Products...">
                             <button type="submit">Search</button>
                         </form>
@@ -235,7 +260,7 @@
             </div>
             <form class="product-block">
                 {% for product in products %}
-                <div class="product">
+                <div class="product-listing">
                     <p id="x-icon">&#10005;</p>
                     <hr>
                     <img src="../static/images/sprout.PNG" alt="">
@@ -267,4 +292,22 @@
             </div>
         </section>
     </section>
+
+    <script>
+        document.getElementById('searchForm').addEventListener('submit', mergeForms);
+
+        function mergeForms(e) {
+          e.preventDefault();
+          const searchForm = document.getElementById('searchForm');
+          const filterForm = document.getElementById('filterForm');
+        
+          const params = new URLSearchParams(new FormData(searchForm));
+          const filterParams = new FormData(filterForm);
+          for (const [key, value] of filterParams) {
+            params.set(key, value); // override if same key
+          }
+        
+          window.location.href = `/search?${params.toString()}`;
+        }
+        </script>
 {% endblock %}
