--- a/templates/vendor.html
+++ b/templates/vendor.html
@@ -8,20 +8,17 @@
 }
 
 .vendor_wrapper {
-    display: flex;
-    flex-direction: column;
     min-height: 100vh;
 }
 
 .vendor_container {
-    background-color: aliceblue;
-    background-image: url("https://i.pinimg.com/736x/0b/61/f1/0b61f1f87e16785ea935dcf261cb80b3.jpg");
+    background-image: url(https://i.pinimg.com/736x/0b/61/f1/0b61f1f87e16785ea935dcf261cb80b3.jpg);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     color: var(--Violet--);
     padding-top: 10px;
     padding-bottom: 80px;
-    flex-grow: 1;
 }
 
 /* boxes section */
@@ -40,23 +37,15 @@
 
 .plan-items {
     min-height: 50vh;
-    margin: 1%;
-    border-radius: 5px;
-    font-size: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    background-image: url("{{ url_for('static', filename='images/flower.jpg') }}");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
     transition: box-shadow 0.3s ease;
     position: relative;
     overflow: visible;
+    background: var(--grey-purple--);
 }
 
 
 .plan-items div {
     padding: 15px;
-    font-size: 20px;
     text-align: center;
 }
 
@@ -74,18 +63,18 @@ h2, h3 {
 .corner-logo2,
 .corner-logo3 {
     position: absolute;
-    bottom: -15px;
-    width: 40px;
-    height: 40px;
+    width: 120px;
     z-index: 2;
 }
 
-.corner-logo1 { left: -15px; }
-.corner-logo2 {
-    left: 50%;
-    transform: translateX(-50%);
+.corner-logo1 { 
+    left: -55px; 
+    top: -50px;
 }
-.corner-logo3 { right: -15px; }
+.corner-logo3 { 
+    right: -55px;
+    bottom: -50px;
+}
 
 #user-icon {
     width: 100px;
@@ -96,8 +85,7 @@ h2, h3 {
 
 /* reviews section */
 .review-section {
-    padding: 40px 20px;
-    margin-top: 30px;
+    padding: 0 20px;
 }
 
 .review-section h1 {
@@ -127,12 +115,10 @@ h2, h3 {
 <!-- Wrapper to help footer behave -->
 <div class="vendor_wrapper">
     <div class="vendor_container">
-        <h1>Welcome Vender</h1>
-
         <section class="plans-section">
             <div class="plans-showcase">
-                <div class="plan-items" style="width: 31%;max-width: 300px;">
-                    <img src="{{ url_for('static', filename='images/flowerbadge.jpg') }}" alt="Badge" class="corner-logo1">
+                <div class="plan-items" style="width: 31%;max-width: 300px;border-radius: 10px 0 0 10px;">
+                    <img src="{{ url_for('static', filename='images/metal-flower.png') }}" alt="Badge" class="corner-logo1">
                     <div>
                         <h1 style="padding-top: 40px;">User Info</h1>
                         <img src="{{ url_for('static', filename='images/user-logo.png') }}" alt="" id="user-icon">
@@ -141,38 +127,39 @@ h2, h3 {
                     </div>    
                 </div>
 
-                <div class="plan-items" style="width: 800px;">
-                    <img src="{{ url_for('static', filename='images/flowerbadge.jpg') }}" alt="Badge" class="corner-logo2">
+                <div class="plan-items" style="width: 1000px;">
                     <div>
-                        <h1 style="padding-top: 40px;">Products</h1>
+                        <h1 style="padding-top: 40px;">Product Garden</h1>
                     </div>
-                    {% for product in products %}
-                    <form method="POST" action="{{ url_for('handle_product_action') }}" class="product_form">
-                        <img src="{{ url_for('static', filename='images/tulip.png') }}" alt="">
-                        <ul class="product">
-                            <li>Product ID: {{ product['product_id']}}</li>
-                            <li>Product Name: {{ product['product_name']}}</li>
-                            <li>Description: {{ product['product_desc']}}</li>
-                            <li>Colors: {{product['product_color']}}
-                            </li>
-                            <li>Sizes: {{product['product_sizes']}}
-                            </li>
-                            <li>Quantity: {{ product['product_quantity']}}</li>
-                            <li>Warranty: {% if product['product_warranty'] %}{{ product['product_warranty'] }}{% else %}No warranty{% endif %}</li>
-                            <li>Original Price: {{ product['original_price']}}</li>
-                            <li>Discount Price: {{ product['discount_price']}}</li>
-                        </ul>
-
-                        <input type="hidden" name="product_id" value="{{product['product_id']}}">
-
-                        <button class="signup" name="action" type="submit" value="edit">Edit</button>
-                        <button class="signup" name="action" type="submit" value="delete">Delete</button>
-                    </form>
-                    {% endfor %}
+                    <div class="products">
+                        {% for product in products %}
+                        <form method="POST" action="{{ url_for('handle_product_action') }}" class="product_form">
+                            <p id="x-icon" style="justify-self: self-start;">&#10005;</p>
+                    <hr>
+                            <ul class="product">
+                                <img src="{{ url_for('static', filename='images/tulip.png') }}" alt="">
+                                <li>Product ID: {{ product['product_id']}}</li>
+                                <li>Product Name: {{ product['product_name']}}</li>
+                                <li>Description: {{ product['product_desc']}}</li>
+                                <li>Colors: {{product['product_color']}}
+                                </li>
+                                <li>Sizes: {{product['product_sizes']}}
+                                </li>
+                                <li>Quantity: {{ product['product_quantity']}}</li>
+                                <li>Warranty: {% if product['product_warranty'] %}{{ product['product_warranty'] }}{% else %}No warranty{% endif %}</li>
+                                <li>Original Price: {{ product['original_price']}}</li>
+                                <li>Discount Price: {{ product['discount_price']}}</li>
+                            </ul>
+                            <input type="hidden" name="product_id" value="{{product['product_id']}}">
+                            <button class="sign-up" name="action" type="submit" value="edit">Edit</button>
+                            <button class="sign-up" name="action" type="submit" value="delete">Delete</button>
+                        </form>
+                        {% endfor %}
+                    </div>
                 </div>
 
-                <div class="plan-items" style="width: 31%;max-width: 300px;">
-                    <img src="{{ url_for('static', filename='images/flowerbadge.jpg') }}" alt="Badge" class="corner-logo3">
+                <div class="plan-items" style="width: 31%;max-width: 300px;border-radius: 0 10px 10px 0;">
+                    <img src="{{ url_for('static', filename='images/metal-blossom.png') }}" alt="Badge" class="corner-logo3">
                     <div>
                         <h1 style="padding-top: 40px;">Vendor Dashboard</h1>
                     </div>
@@ -192,6 +179,7 @@ h2, h3 {
 
         <!-- Reviews section -->
         <section class="review-section">
+            <img src="../static/images/globe.png" alt="" style="width: 250px;margin: 0 auto;display: block;">
             <h1>Customer Reviews</h1>
             <div class="review-boxes">
                 {% if reviews %}
