--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 <style>
+   body{
+        background-image: url("{{ url_for('static', filename='images/pastel_background.jpg') }}");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+}
 .cart-container {
     background-image: url("{{ url_for('static', filename='images/pastel_background.jpg') }}");
     background-position: center;
@@ -77,7 +83,7 @@
     background: #9d6094;
 }
 </style>
-
+<body>
 <div class="cart-container">
     <h1 class="cart-title">Cart</h1>
 
@@ -116,11 +122,12 @@
     <div class="cart-total">
         Total Price: ${{ '%.2f' % total_price }}
     </div>
-
     <a href="{{ url_for('checkout') }}" class="purchase-button">Proceed to Checkout</a>
 
     {% else %}
     <p style="text-align:center; font-size:18px;">Your cart is empty!</p>
+    <a href="{{ url_for('customer') }}" class="purchase-button" style="margin-top:30px;">Continue Shopping</a>
     {% endif %}
 </div>
+</body>
 {% endblock %}
