--- a/templates/product.html
+++ b/templates/product.html
@@ -87,7 +87,7 @@
 </style>
 
 <body>
-    <h1>Product Info Page</h1>
+    <h1>View Product Details Below</h1>
 
     <div class="product">
         <p id="x-icon">&#10005;</p>
