vendor orders halfway

--- a/templates/vendor.html
+++ b/templates/vendor.html
@@ -173,6 +173,11 @@ h2, h3 {
                             Add Product
                         </a>
                     </div>
+                    <div>
+                        <a href="{{ url_for('orders') }}" class="sign-up">
+                            Orders
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
