--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -406,3 +406,31 @@ hr {
   display: block;
   border: 1px solid var(--Violet--);
 }
+
+.filter {
+  display: block;
+  background: var(--pastel-purple--);
+  margin: 20px 0;
+  border-radius: 10px;
+  padding: 10px 20px;
+}
+
+.filter button {
+  z-index: -1;
+  background: var(--Violet--);
+  color: var(--pastel-purple--);
+  border: none;
+  border-radius: 30px;
+  padding: 10px;
+  display: block;
+  margin: 0 auto;
+}
+
+.filter select {
+  display: block;
+  width: max-content;
+  margin: 5px;
+  border-radius: 30px;
+  padding: 10px;
+  border: 2px solid var(--Violet--);
+}
