--- a/templates/customer.html
+++ b/templates/customer.html
@@ -2,7 +2,6 @@
 {% block content %}
 <style>
    body{
-        background-image: url("{{ url_for('static', filename='images/pastel_background.jpg') }}");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
@@ -70,9 +69,10 @@
         color: var(--Violet--);
         margin: 5px;
         height: 450px;
-        overflow-y: scroll;
+        overflow-y:auto;
         position: relative;
         scrollbar-width: none;
+        z-index: 10;
     }
 
     .product-listing img {
@@ -83,6 +83,7 @@
 
     .product-listing ul {
         margin: 10px;
+        padding-bottom: 40px;
     }
 
     .product_name {
@@ -103,9 +104,13 @@
         padding: 15px;
         color: var(--pastel-purple--);
         border-radius: 0 0 10px 10px;
-        position: absolute;
+        position: sticky;
         bottom: 0px;
-        z-index: 4;
+        z-index: 20;
+    }
+
+    .add-to-cart a {
+        text-decoration: none;
     }
 
     .add-to-cart:hover {
@@ -182,34 +187,6 @@
         padding: 5px;
     }
 
-    .filter {
-        display: block;
-        background: var(--pastel-purple--);
-        margin: 20px 0;
-        border-radius: 10px;
-        padding: 10px 20px;
-    }
-
-    .filter button {
-        z-index: -1;
-        background: var(--Violet--);
-        color: var(--pastel-purple--);
-        border: none;
-        border-radius: 30px;
-        padding: 10px;
-        display: block;
-        margin: 0 auto;
-    }
-
-    .filter select {
-        display: block;
-        width: max-content;
-        margin: 5px;
-        border-radius: 30px;
-        padding: 10px;
-        border: 2px solid var(--Violet--);
-    }
-
 </style>
     <section class="store-page">
         <section id="side-bar">
@@ -266,8 +243,6 @@
                     <img src="../static/images/strawberry.PNG" alt="">
                 </div>
             </div>
-            <!-- <form action=" url_for('product', product_id=product.id) " class="product-block"> --> 
-                <!-- ^^removed the curly brackets to comment jinja operator out -->
                 {% for product in products %}
                 <div class="product-listing">
                     <p id="x-icon">&#10005;</p>
@@ -285,7 +260,7 @@
                         {% endif %}
                     </ul>
                     <input type="hidden" value="{{product.product_id}}">
-                    <a href="{{ url_for('product', product_id=product.product_id) }}">
+                    <a href="{{ url_for('product', product_id=product.product_id) }}" style="text-decoration: none;">
                     <input type="submit" value="View Product Details" class="add-to-cart"></a>
                     
                 </div>
