--- a/templates/product.html
+++ b/templates/product.html
@@ -10,16 +10,12 @@
     .product {
         display: inline-block;
         background: var(--pastel-purple--);
-        border: 4px solid var(--Violet--);
         border-radius: 20px;
-        width: 300px;
+        width: 30%;
         color: var(--Violet--);
         margin: 20px auto;
-        height: 450px;
-        overflow-y: auto;
-        padding: 20px;
         position: relative;
-        box-shadow: 0 4px 12px rgba(0,0,0,0,0.15);
+        padding: 0;
     }
 
     .product img {
@@ -31,14 +27,14 @@
     }
 
     .product ul {
-        margin: 0 0 20px 0;
-        padding: 0;
+        padding: 0 20px;
         list-style: none;
         text-align: left;
+        margin-bottom: 10px;
     }
 
     .product ul li {
-        margin-bottom: 12px; 
+        margin: 5px 0; 
         line-height: 1.5; 
         font-size: 14px;
     }
@@ -51,15 +47,13 @@
 
     .selection-form{
         text-align: left;
-        margin-top: 10px;
+        padding: 0 20px;
     }
 
     .selection-form label{
         font-weight: bold;
         display: block;
         margin-bottom: 5px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
     }
 
     .section-form button{
@@ -80,17 +74,18 @@
         transition: color 0.2s ease;
     }
 
-    #x-icon:hover {
-        color: #ff6b6b;
+    #quantity_4 {
+        margin-bottom: 20px;
     }
 
 </style>
 
 <body>
-    <h1>View Product Details Below</h1>
-
     <div class="product">
-        <p id="x-icon">&#10005;</p>
+        <a href="{{url_for('customer')}}" style="text-decoration: none;">
+            <p id="x-icon">&#10005;</p>
+        </a>
+        <hr>
 
         <h1 class="product_name">{{ product.product_name }}</h1>
 
@@ -119,7 +114,7 @@
             <li><strong>Sold By:</strong> {{ product.vendor_username }}</li>
         </ul>
 
-        <form class="selection-form" action="/add_to_cart" method="POST">
+        <form class="selection-form filter" action="/add_to_cart" method="POST">
             
             <!-- Size -->
             <label for="size_{{ product.product_id }}">Choose Size:</label>
@@ -153,7 +148,7 @@
             </select>
 
             <input type="hidden" name="product_id" value="{{ product.product_id }}">
-            <button type="submit">Add to Cart</button>
+            <button type="submit" class="sign-up">Add to Cart</button>
         </form>
 
     </div>
