--- a/templates/cart.html
+++ b/templates/cart.html
@@ -109,7 +109,7 @@
                 <td>${{ '%.2f' % (item.price * item.quantity) }}</td>
                 <td>
                     <form action="{{ url_for('remove_from_cart') }}" method="POST" style="display:inline;">
-                        <input type="hidden" name="index" value="{{ loop.index0 }}">
+                        <input type="hidden" name="cart_item_id" value="{{ item.cart_item_id }}">
                         <button type="submit" class="cart-remove-button">Remove</button>
                     </form>
                 </td>
