--- a/templates/customer.html
+++ b/templates/customer.html
@@ -201,6 +201,7 @@
                         <li>Fullname: {{account.first_name + ' ' + account.last_name}}</li>
                         <li>Email: {{account.email}}</li>
                         <a href="{{ url_for('view_orders') }}">View Orders</a>
+                        <a href="{{ url_for('view_reviews')}}">View Reviews</a>
 
                     </ul>
                 </div>
