--- a/templates/view_orders.html
+++ b/templates/view_orders.html
@@ -50,6 +50,8 @@
             <p><strong>Order Status:</strong> </p>
             <p><strong>Payment Info:</strong> {{ order.payment_info }}</p>
             <p><strong>Total Items:</strong> {{ order.total_items }}</p>
+        
+            <a href="{{ url_for('review', order_id=order.order_id) }}" class="btn review-btn">Review Order</a>
         </div>
         {% endfor %}
     {% else %}
