--- a/templates/customer.html
+++ b/templates/customer.html
@@ -49,10 +49,6 @@
         margin: 0 auto;
     }
 
-    .customer-info {
-        padding-bottom: 15px;
-    }
-
     .customer-info ul {
         padding: 10px 20px;
     }
@@ -187,6 +183,10 @@
         padding: 5px;
     }
 
+    .view-order {
+        margin: 5px auto;
+    }
+
 </style>
     <section class="store-page">
         <section id="side-bar">
@@ -200,8 +200,7 @@
                         <li>Username: {{account.username}}</li>
                         <li>Fullname: {{account.first_name + ' ' + account.last_name}}</li>
                         <li>Email: {{account.email}}</li>
-                        <a href="{{ url_for('view_orders') }}">View Orders</a>
-
+                        <a href="{{ url_for('view_orders') }}" class="view-order">View Orders</a>
                     </ul>
                 </div>
             </div>
