--- a/templates/vendor.html
+++ b/templates/vendor.html
@@ -178,6 +178,11 @@ h2, h3 {
                             Orders
                         </a>
                     </div>
+                    <div>
+                        <a href="{{ url_for('complaint_status') }}" class="sign-up">
+                            Complaints
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
